refactor(runtime): 重构工作区管理与服务重建机制
- 引入 ApplicationKernel 作为唯一组合根，集中管理服务重建与工作区切换
- ChatViewController 改用 ApplicationKernel 构造，简化依赖注入
- 采用 WorkspaceRuntime 原子替换 AgentRuntime、ChatService、PlanModeService 和 ModeRegistry 实例
- 迁移工作区切换、配置重载和浏览器管理生命周期到 ApplicationKernel
- 精简并移除 ChatViewController 中冗余的服务关闭和重建代码，改由内核统一处理
- 重构模式注册表重接逻辑，确保新旧服务切换一致性和线程安全
- 统一失败恢复策略，重试失败时从 ApplicationKernel 取最新运行时快照
- UI 控制权恢复时同步输入控件启用状态和错误提示通知
- 优化命令执行和进程管理逻辑，使用 ProcessTerminator 执行进程树强制终止
- 新增构建命令解析，拒绝包含 shell 管道重定向命令，防止注入风险
- AtomicFileWriter 增强写操作支持临时文件唯一命名及并发写入安全，添加多场景测试
- 调整凭据加密器，禁止加密失败返回明文，强化主密钥预热逻辑避免口令漂移问题
- 优化 DebouncedPersister 节流持久化器，改用显式锁避免竞态，增加任务取消控制与容错
- 代码查找功能增强 glob 匹配支持根层相对路径匹配，提升灵活性与准确度